# Quester

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.44399c1  CMakeLists.txt.user.919b45f  README.md  TODO.md  build.sh  docs-doxygen-config  new_class.sh  queste.kdev4
Public/Default/: CreateStructure.db  Worlds.json
Quester/Core/: CMakeLists.txt  CmakeSettings.json
Quester/Core/include/Core/: DX11_Backend.hxx  FileSystem.hxx  IBackend.hxx  QCharacter.hxx  QDialogue.hxx  QGlobals.hxx  QProject.hxx  Quest.hxx
Quester/Core/src/Core/: DX11_Backend.cxx  FileSystem.cxx  QCharacter.cxx  QDialogue.cxx  QProject.cxx  Quest.cxx
Quester/Editor/: CMakeLists.txt
Quester/Editor/include/Editor/: IBase.h  ProjectSelector.hxx  QProjectButton.hxx
Quester/Editor/src/Editor/: ProjectSelector.cxx
Quester/Graphics/: CMakeLists.txt
Quester/Graphics/include/Graphics/: Global.h  QTexture.hxx  QWindow.hxx
Quester/Graphics/src/Graphics/: QTexture.cxx  QWindow.cxx
include/Windows/: ProjectSelectorWindow.h
src/: App.cpp  App.h  ContextItem.qml  Quester.cpp  Quester.h  main.cpp  main.cxx  main.qml  qml.qrc
src/UI/: ContextMenu.qml  ProjectCreatorWindow.qml  main.qml  qml.qrc
src/Windows/: ProjectSelectorWindow.cpp
src/internal/private/: Messages.cpp  NewQuestDialog.cpp  NewQuestDialog.ui  NewQuestDialog.ui.autosave  NodeCanvas.cpp  Quest.cpp  QuestEditor.cpp  Utils.cpp  World.cpp  dialogue.cpp  dialoguegraph.cpp  dialoguegraph.ui  dialoguepreview.cpp  dialoguepreview.ui  dialogueselectornode.cpp  dialogueselectornode.ui  getitemwidget.cpp  getitemwidget.ui  getquestwidget.cpp  getquestwidget.ui  mainwindow.cpp  mainwindow.ui  makedialoguewidget.cpp  makedialoguewidget.ui  newquest.cpp  newquest.ui  newquestdialog.cpp  newquestdialog.ui  questdialogues.cpp  questdialogues.ui  questgeneralinfo.cpp  questgeneralinfo.ui  questviewer.cpp  questviewer.ui  selectcharacterwidget.cpp  selectcharacterwidget.ui  updatequestwidget.cpp  updatequestwidget.ui
src/internal/private/DB/: Manager.cpp
src/internal/private/GraphEditor/: AddItemModel.cpp  CompleteQuestModel.cpp  FailQuestModel.cpp  GetItemModel.cpp  GetQuestModel.cpp  GraphBeginDataModel.cpp  GraphFinishDataModel.cpp  KillActorModel.cpp  MakeDialogModel.cpp  MaxModel.cpp  OpenCloseWindowModel.cpp  RemoveItemModel.cpp  RunDialogModel.cpp  SpawnAtLocationModel.cpp  TextDisplayDataModel.cpp  TextSourceDataModel.cpp  UnlockTrophieModel.cpp  UpdateQuestValueModel.cpp  dialogueeditor.cpp  dialogueeditor.ui
src/internal/private/Models/: QuestTableModel.cpp
src/internal/private/UI/: ProjectSelector.qml
src/internal/public/: BasicGLPane.h  Globals.h  Messages.h  NewQuestDialog.h  NodeCanvas.h  Quest.h  QuestEditor.h  Utils.h  World.h  dialogue.h  dialoguegraph.h  dialoguepreview.h  dialogueselectornode.h  getitemwidget.h  getquestwidget.h  mainwindow.h  makedialoguewidget.h  newquest.h  newquestdialog.h  questdialogues.h  questgeneralinfo.h  questviewer.h  selectcharacterwidget.h  updatequestwidget.h
src/internal/public/DB/: Manager.h
src/internal/public/GraphEditor/: AddItemModel.hpp  CompleteQuestModel.hpp  DialogueData.hpp  ExecData.hpp  FailQuestModel.hpp  GetItemModel.hpp  GetQuestModel.hpp  GraphBeginDataModel.hpp  GraphFinishDataModel.hpp  ItemData.hpp  KillActorModel.hpp  MakeDialogModel.hpp  MaxModel.hpp  OpenCloseWindowModel.hpp  QuestData.hpp  RemoveItemModel.hpp  RunDialogModel.hpp  SpawnAtLocationModel.hpp  TextDisplayDataModel.hpp  TextSourceDataModel.hpp  UnlockTrophieModel.hpp  UpdateQuestValueModel.hpp  WaitModel.hpp  dialogueeditor.h
src/internal/public/Models/: QuestTableModel.h
